--- a/index.html
+++ b/index.html
@@ -93,6 +93,22 @@ Location
 <div style='display: none;' class='MenuComponent' id='FlightParameters'>
 <a id='FlightParameters-Top'></a>
 <section>
+<!-- Guidance Bar taking the user through the steps to plan the flight -->
+<div class="row pln-steps">
+    <!-- Step One-->
+    <div class='col-4'>
+        <p id="pln-step-one" class="pln-param-instruct"><span class="pln-step">Step One</span>Select your competencies,
+            skills and certifications.</p>
+    </div>
+    <!-- Step Two-->
+    <div class='col-4'>
+        <p id="pln-step-two" class="pln-param-instruct"><span class="pln-step">Step Two</span>Selec the drone category. Refer to the CAA <a href='https://publicapps.caa.co.uk/modalapplication.aspx?appid=11&mode=detail&id=415'>CAP 722</a> for guidance.</p>
+    </div>
+    <!-- Results from Step One and Step Two-->
+    <div class='col-4'>
+        <p id="pln-result-a" class="pln-param-instruct"><span class="pln-step">Results</span>The permissible flight categories are shown, in <font class="pln-flight-yes">Green</font>, non-permissible flights are <font class="pln-flight-no">Crossed out in Red</font>.</p>
+    </div>
+</div>
 <div class="row">
 
 <!-- Evaluate the competencies of the remote pilot all can be selected -->
@@ -105,7 +121,7 @@ Location
         <label class="pln-comp-lbl" for="pln-comp-rtm-chk">
         Read the Manual
         </label>
-        <input type="checkbox" id="pln-comp-rtm-chk" class="pln-param-input">
+        <input type="checkbox" id="pln-comp-rtm-chk" class="pln-param-input pln-comp-input">
       </div>
       <div class="pln-comp-desc">
         <p>Ensure that you have read the manual so that you are familiar with the drone, its specifications, its capabilities and its limitations.</p>
@@ -118,7 +134,7 @@ Location
         <label class="pln-comp-lbl" for="pln-comp-opid-chk">
          <p>Operator ID</p>
         </label>
-        <input type="checkbox" id="pln-comp-opid-chk" class="pln-param-input">
+        <input type="checkbox" id="pln-comp-opid-chk" class="pln-param-input pln-comp-input">
       </div>
       <div  class="pln-comp-desc">
         <p>Ensure that you have obtained an operator ID from the Civil Aviation Authority.</p>
@@ -131,7 +147,7 @@ Location
         <label class="pln-comp-lbl" for="pln-comp-flyid-chk">
          <p>Flyer ID</p>
         </label>
-        <input type="checkbox" id="pln-comp-flyid-chk" class="pln-param-input">
+        <input type="checkbox" id="pln-comp-flyid-chk" class="pln-param-input pln-comp-input">
       </div>
       <div  class="pln-comp-desc">
         <p>Ensure that you have taken the online test and obtained a Flyer ID from the Civil Aviation Authority.</p>
@@ -144,7 +160,7 @@ Location
         <label class="pln-comp-lbl" for="pln-comp-a2coc-chk">
          <p>A2 CoC</p>
         </label>
-        <input type="checkbox" id="pln-comp-a2coc-chk" class="pln-param-input">
+        <input type="checkbox" id="pln-comp-a2coc-chk" class="pln-param-input pln-comp-input">
       </div>
       <div  class="pln-comp-desc">
         <p>Ensure that you hold a current A2 Certificate of Competency from a CAA approved training organisation.</p>
@@ -157,21 +173,13 @@ Location
         <label class="pln-comp-lbl" for="pln-comp-gvc-chk">
          <p>GVC</p>
         </label>
-        <input type="checkbox" id="pln-comp-gvc-chk" class="pln-param-input">
+        <input type="checkbox" id="pln-comp-gvc-chk" class="pln-param-input pln-comp-input">
       </div>
       <div  class="pln-comp-desc">
         <p>Ensure that you hold a current General Visual Line of Sight Certificate or GVC for short.</p>
       </div>
     </div>
 
-
-
-
-<div class="pln-param-instruct">
-<p>
-<span class="pln-step">Step One</span>
-Select above all the competencies, skills and certifications that you currently hold.</p>
-</div>
  </div>
 
  <!-- End of Competencies Section-->
@@ -182,7 +190,7 @@ Select above all the competencies, skills and certifications that you currently 
 
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c01" value="option1" class="pln-param-input">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c01" value="option1" class="pln-param-input pln-drone-input">
         <label for="pln-dronecat-radio-c01">
           <p>C0 - Toy or no camera</p>
         </label>
@@ -195,7 +203,7 @@ Select above all the competencies, skills and certifications that you currently 
     <!-- C0 with camera-->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c02" value="option2" class="pln-param-input">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c02" value="option2" class="pln-param-input pln-drone-input">
         <label for="pln-dronecat-radio-c02">
           <p>C0 - Camera</p>
         </label>
@@ -208,7 +216,7 @@ Select above all the competencies, skills and certifications that you currently 
     <!-- C1 certified-->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c1" value="option3" class="pln-param-input">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c1" value="option3" class="pln-param-input pln-drone-input">
         <label for="pln-dronecat-radio-c1">
         <p>C1 - Certified</p>
         </label>
@@ -221,7 +229,7 @@ Select above all the competencies, skills and certifications that you currently 
     <!-- A1 transition-->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4" class="pln-param-input">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a1t" value="option4" class="pln-param-input pln-drone-input">
         <label for="pln-dronecat-radio-a1t">
           <p>A1 - Transition</p>
         </label>
@@ -234,7 +242,7 @@ Select above all the competencies, skills and certifications that you currently 
     <!-- C2 Certified Low Speed-->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c2ls" value="option5" class="pln-param-input">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c2ls" value="option5" class="pln-param-input pln-drone-input">
         <label for="pln-dronecat-radio-c2ls">
           <p>C2 - Low Speed</p>
         </label>
@@ -247,7 +255,7 @@ Select above all the competencies, skills and certifications that you currently 
     <!-- C2 Certified -->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c2" value="option6"  class="pln-param-input">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c2" value="option6"  class="pln-param-input pln-drone-input">
         <label for="pln-dronecat-radio-c2">
           <p>C2</p>
         </label>
@@ -260,7 +268,7 @@ Select above all the competencies, skills and certifications that you currently 
     <!-- A2 Transition -->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a2t" value="option7"  class="pln-param-input">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-a2t" value="option7"  class="pln-param-input pln-drone-input">
         <label for="pln-dronecat-radio-a2t">
           <p>A2 - Transition</p>
         </label>
@@ -273,7 +281,7 @@ Select above all the competencies, skills and certifications that you currently 
     <!-- C3 -->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c3" value="option8" class="pln-param-input">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c3" value="option8" class="pln-param-input pln-drone-input">
         <label for="pln-dronecat-radio-c3">
           <p>C3</p>
         </label>
@@ -286,7 +294,7 @@ Select above all the competencies, skills and certifications that you currently 
     <!-- C4 -->
     <div class="pln-dronecat">
       <div class="pln-dronecat-head">
-        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c4" value="option9"  class="pln-param-input">
+        <input type="radio" name="pln-dronecat-radios" id="pln-dronecat-radio-c4" value="option9"  class="pln-param-input pln-drone-input">
         <label for="pln-dronecat-radio-c4">
           <p>C4</p>
         </label>
@@ -296,10 +304,7 @@ Select above all the competencies, skills and certifications that you currently 
       </div>
     </div>
 
-<div class="pln-param-instruct">
-<p class='pln-step'>Step Two</p>
-<p>Select below the category for the drone you intend to fly.  Refer to the CAA <a href='https://publicapps.caa.co.uk/modalapplication.aspx?appid=11&mode=detail&id=415'>CAP 722</a> if not sure.</p>
-</div>
+
   </div>
 
 
@@ -311,7 +316,7 @@ Select above all the competencies, skills and certifications that you currently 
     
     <!-- A1 Fly Over Stay Over -->
     <div id="pln-flightcat-a1-so" class="pln-flightcat">
-      <p>A1 Fly Over - Stay Over</p>
+        <p class="pln-flightcat-head">A1 Fly Over - Stay Over</p>
       <div class="pln-flightcat-desc">
         <p>No miniumum separation from uninvolved people, potentially flying over, and staying over uninvolved people.</p>
       </div>
@@ -319,7 +324,7 @@ Select above all the competencies, skills and certifications that you currently 
 
     <!-- A1 Fly Over Pass Over -->
     <div id="pln-flightcat-a1-po" class="pln-flightcat">
-      <p>A1 Fly Over - Pass Over</p>
+      <p class="pln-flightcat-head">A1 Fly Over - Pass Over</p>
       <div class="pln-flightcat-desc">
         <p>No miniumum separation from uninvolved people, potentially flying over, but only passing briefly over uninvolved people.</p>
       </div>
@@ -327,7 +332,7 @@ Select above all the competencies, skills and certifications that you currently 
 
     <!-- A2 Close to People - 5m -->
     <div id="pln-flightcat-a2-5" class="pln-flightcat">
-      <p>A2 Close to People - 5m</p>
+      <p class="pln-flightcat-head">A2 Close to People - 5m</p>
       <div class="pln-flightcat-desc">
         <p>Minimum separation of 5m from uninvolved people.</p>
       </div>
@@ -335,7 +340,7 @@ Select above all the competencies, skills and certifications that you currently 
 
     <!-- A2 Close to People - 30m -->
     <div id="pln-flightcat-a2-30" class="pln-flightcat">
-      <p>A2 Close to People - 30m</p>
+      <p class="pln-flightcat-head">A2 Close to People - 30m</p>
       <div class="pln-flightcat-desc">
         <p>Minimum separation of 30m from uninvolved people.</p>
       </div>
@@ -343,7 +348,7 @@ Select above all the competencies, skills and certifications that you currently 
 
     <!-- A2 Close to People - 50m -->
     <div id="pln-flightcat-a2-50" class="pln-flightcat">
-      <p>A2 Close to People - 50m</p>
+      <p class="pln-flightcat-head">A2 Close to People - 50m</p>
       <div class="pln-flightcat-desc">
         <p>Minimum separation of 50m from uninvolved people.</p>
       </div>
@@ -351,22 +356,17 @@ Select above all the competencies, skills and certifications that you currently 
 
     <!-- A3 Far from People - 50m -->
     <div id="pln-flightcat-a3" class="pln-flightcat">
-      <p>A3 Far From People</p>
+      <p class="pln-flightcat-head">A3 Far From People</p>
       <div class="pln-flightcat-desc">
         <p>Minimum separation of 50m from uninvolved people AND you must remain over 150m from congested areas.</p>
       </div>
 </div>
 
 
-<div class="pln-param-instruct">
-<p>
 
-Select above all the competencies, skills and certifications that you currently hold.</p>
-<span class="pln-step">Step One</span>
 </div>
- </div>
 
- <!-- End of Competencies Section-->
+ <!-- End of Flight Categories Section-->
 <div id="pln-param-reset" class="btn btn-primary">Reset</div>
 </section>
 </div>
@@ -456,6 +456,6 @@ Select above all the competencies, skills and certifications that you currently 
 <!-- Placeholder for Footer Links -->
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 07/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0141</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 08/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0153</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
 </body>
 </html>
