--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
 <meta name='keywords' content=''>
 <meta name='author' content='Stephen Clarke: The Code Institute'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-<script src='https://dronesafetymap.com/client/altitudeAngelMap.js'></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AqXZ0hvITdpn5g-2a8bbicLdCTTJgoQHACH441QxLNJDdc_Qlpl6-3BHR0_lGQpJ' async defer></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWmo-Ndb3YTzwMWSHAzg8an9dM9WDOlMk&callback=initialize&libraries=&v=weekly" async></script>
 <link rel='stylesheet' href='assets/css/uavflightplanner.css'>
-<script src='assets/js/uavflightplanner.js'></script>
 <title>UAV Flight Planner</title>
 </head>
 <body onload="showMenuComponent('HomePage');domLoaded();" onhashchange='showMenuComponent(location.hash.substring(1,location.hash.length-4));'>
@@ -102,7 +96,7 @@ Location
     </div>
     <!-- Step Two-->
     <div class='col-4'>
-        <p id="pln-step-two" class="pln-param-instruct"><span class="pln-step">Step Two</span>Selec the drone category.
+        <p id="pln-step-two" class="pln-param-instruct"><span class="pln-step">Step Two</span>Select the drone category.
             Refer to the CAA <a
                 href='https://publicapps.caa.co.uk/modalapplication.aspx?appid=11&mode=detail&id=415'>CAP 722</a> for
             guidance.</p>
@@ -384,25 +378,25 @@ Location
 <div style='display: none;' class='MenuComponent' id='Location'>
 <a id='Location-Top'></a>
 <section>
+<div class="row">
+ 
+<div id="pln-flsummary" class="col-12"><p>You may wish to return to the <a id="pln-param-rtn" onclick="showMenuComponent('FlightParameters');">Flight Parameters</a> page to determine your flight category.</p></div>
+</div>
 <!-- Guidance Bar taking the user through the steps to plan the flight -->
 <div class="row pln-steps">
     <!-- Step Three-->
     <div class='col-4'>
-        <p id="pln-step-one" class="pln-param-instruct"><span class="pln-step">Step Three</span>Select your competencies,
-            skills and certifications.</p>
+        <p id="pln-step-three" class="pln-param-instruct"><span class="pln-step">Step Three</span>Enter a location, review the Ordnance Survey and Satellite maps against the flight category.</p>
     </div>
     <!-- Step Four-->
-    <div class='col-4'>
-        <p id="pln-step-two" class="pln-param-instruct"><span class="pln-step">Step Four</span>Selec the drone category. Refer to the CAA <a href='https://publicapps.caa.co.uk/modalapplication.aspx?appid=11&mode=detail&id=415'>CAP 722</a> for guidance.</p>
+    <div class='col-4' id="pln-step-four-1">
+        <p id="pln-step-four" class="pln-param-instruct"><span class="pln-step">Step Four</span>View the <a id="pln-dsmap-1">Drone Safety Map</a> for air restrictions and ground hazards.</p>
     </div>
+
     <!-- Step Five-->
     <div class='col-4'>
-        <p id="pln-result-a" class="pln-param-instruct"><span class="pln-step">Step Five</span>The permissible flight categories are shown, in <font class="pln-flight-yes">Green</font>, non-permissible flights are <font class="pln-flight-no">Crossed out in Red</font>.<div class="btn btn-primary" onclick="droneSafetyMap(51.477976,0.000001);" class="col-12">Drone Safety Map</div></p>
+        <p id="pln-step-five" class="pln-param-instruct"><span class="pln-step">Step Five</span>Use the top-left corner menu of the Drone Safety Map to <b>Submit a Flight Report.</b></p>
     </div>
-</div>
-<div class="row">
- 
-<div id="pln-flsummary"><p>You may wish to return to the <a id="pln-param-rtn">Flight Parameters</a> page to determine your flight category.</p></div>
 </div>
 <div class="row">
   
@@ -412,18 +406,20 @@ Location
       <!-- Following form dervied from Bootstrap https://getbootstrap.com/docs/4.1/components/forms/ !-->
       <form>
         <div class="form-group">
-          <label for="pln-Postcode">Postcode (enter when complete)</label>
-          <input type="text" class="form-control" id="pln-Postcode" aria-describedby="UK Postcode" placeholder="Enter postcode">
+          <label for="pln-Postcode">Postcode (Enter when complete)</label>
+          <input type="text" class="form-control" id="pln-postcode" aria-describedby="UK Postcode" placeholder="Enter postcode">
         </div>
         <div class="form-group">
           <label for="pln-Latitude">Latitude</label>
-          <input type="number" class="form-control" id="pln-Latitude" name="plnLat" placeholder="Decimal Latitude">
+          <input type="number" class="form-control" id="pln-latitude" name="plnLat" placeholder="Decimal Latitude">
           <label for="pln-Longitude">Longitude</label>
-          <input type="number" class="form-control" id="pln-Longitude" name="plnLong" placeholder="Decimal Longitdue">
+          <input type="number" class="form-control" id="pln-longitude" name="plnLong" placeholder="Decimal Longitdue">
           <small id="latlongHelp" class="form-text text-muted">You may wish to further localise the latitude and longitude</small>
         </div>
         
-        <div class="btn btn-primary" id="pln-Recenter">Re-Centre Maps</div>
+        <div class="btn btn-primary" id="pln-recenter">Re-Centre Maps</div>
+<div id="pln-dsmap-2" class="btn btn-primary" onclick="droneSafetyMap();">Drone Safety Map</div>
+
       </form>
     </div>
 
@@ -457,6 +453,11 @@ Location
 <!-- Placeholder for Footer Links -->
 <p class='enquiry'>For Enquiries Please Email: Stephen.J.Clarke@hotmail.co.uk</p>
 <p class='d-none d-lg-inline footer-sm'>Created by Stephen Clarke on behalf of The Code Institute 
-||&nbsp;Last update on 08/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0173</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+||&nbsp;Last update on 09/05/2021||&nbsp;<span class='footer-sm' id='HTMLSerNo'>0188</span>.<span class='footer-sm' id='CSSSerNo'></span><span  class='footer-sm' id='JSSerNo'></span></p></footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AqXZ0hvITdpn5g-2a8bbicLdCTTJgoQHACH441QxLNJDdc_Qlpl6-3BHR0_lGQpJ' async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWmo-Ndb3YTzwMWSHAzg8an9dM9WDOlMk&callback=initialize&libraries=&v=weekly" async></script>
+<script src='assets/js/uavflightplanner.js'></script>
 </body>
 </html>
